resources/y.output
Terminals unused in grammar

   OP_LOG_NOT


Rules useless in parser due to conflicts

   35 expresion: expresion OP_SUMA termino
   36          | expresion OP_RESTA termino

   38 termino: termino OP_DIV factor
   39        | termino OP_MUL factor

   48 variables: TOKEN_ID


State 36 conflicts: 8 shift/reduce
State 37 conflicts: 2 shift/reduce
State 42 conflicts: 2 shift/reduce, 11 reduce/reduce
State 46 conflicts: 3 shift/reduce
State 48 conflicts: 2 shift/reduce, 5 reduce/reduce
State 71 conflicts: 2 shift/reduce
State 72 conflicts: 2 shift/reduce, 27 reduce/reduce
State 73 conflicts: 2 shift/reduce, 27 reduce/reduce
State 74 conflicts: 2 shift/reduce, 5 reduce/reduce
State 75 conflicts: 27 reduce/reduce
State 76 conflicts: 27 reduce/reduce
State 90 conflicts: 3 shift/reduce, 1 reduce/reduce
State 95 conflicts: 1 shift/reduce


Grammar

    0 $accept: pgm $end

    1 pgm: programa

    2 programa: PR_MAIN PR_DIM declaracion_variables PR_ENDIM lista_sentencias
    3         | PR_MAIN lista_sentencias
    4         | sentencia lista_sentencias
    5         | sentencia

    6 lista_sentencias: sentencia
    7                 | sentencia lista_sentencias

    8 sentencia: condicional
    9          | asignacion
   10          | iteracion
   11          | io
   12          | iguales
   13          | filter

   14 iguales: PR_IGUALES PAR_ABRE expresion COMA COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

   15 lista_expresiones: expresion COMA lista_expresiones
   16                  | expresion

   17 filter: PR_FILTER PAR_ABRE condicion COMA COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

   18 lista_variables: TOKEN_ID COMA lista_variables
   19                | TOKEN_ID

   20 io: entrada
   21   | salida

   22 entrada: PR_READ TOKEN_ID

   23 salida: PR_WRITE TOKEN_ID
   24       | PR_WRITE CONST_STR

   25 condicional: PR_IF condicion PR_THEN lista_sentencias PR_ENDIF
   26            | PR_IF condicion PR_THEN lista_sentencias PR_ELSE lista_sentencias PR_ENDIF

   27 condicion: comparacion
   28          | comparacion OP_LOG_AND comparacion
   29          | comparacion OP_LOG_OR comparacion

   30 comparacion: expresion comparador expresion
   31            | PR_NOT expresion

   32 iteracion: PR_WHILE condicion PR_BEGIN lista_sentencias PR_END

   33 asignacion: TOKEN_ID OP_IGUAL expresion

   34 expresion: termino
   35          | expresion OP_SUMA termino
   36          | expresion OP_RESTA termino

   37 termino: factor
   38        | termino OP_DIV factor
   39        | termino OP_MUL factor

   40 factor: CONST_STR
   41       | CONST_INT
   42       | CONST_FLOAT
   43       | TOKEN_ID
   44       | expresion

   45 declaracion_variables: OP_DIM COR_ABRE lista_variables_tipos COR_CIERRA

   46 lista_variables_tipos: TOKEN_ID COR_CIERRA OP_AS COR_ABRE tipo_dato
   47                      | TOKEN_ID COMA variables COMA tipo_dato

   48 variables: TOKEN_ID
   49          | TOKEN_ID COMA variables

   50 tipo_dato: PR_INT
   51          | PR_FLOAT
   52          | PR_STRING

   53 comparador: OP_MAYOR
   54           | OP_MENOR
   55           | OP_MENOR_IGUAL
   56           | OP_MAYOR_IGUAL
   57           | OP_IGUAL_IGUAL
   58           | OP_DISTINTO


Terminals, with rules where they appear

$end (0) 0
error (256)
TOKEN_ID (258) 18 19 22 23 33 43 46 47 48 49
CONST_INT (259) 41
CONST_STR (260) 24 40
CONST_FLOAT (261) 42
PR_MAIN (262) 2 3
PR_DIM (263) 2
PR_ENDIM (264) 2
PR_IGUALES (265) 14
PR_FILTER (266) 17
PR_WRITE (267) 23 24
PR_READ (268) 22
PR_IF (269) 25 26
PR_THEN (270) 25 26
PR_ENDIF (271) 25 26
PR_ELSE (272) 26
PR_NOT (273) 31
PR_WHILE (274) 32
PR_BEGIN (275) 32
PR_END (276) 32
PAR_ABRE (277) 14 17
PAR_CIERRA (278) 14 17
COR_ABRE (279) 14 17 45 46
COR_CIERRA (280) 14 17 45 46
COMA (281) 14 15 17 18 47 49
OP_LOG_AND (282) 28
OP_LOG_OR (283) 29
OP_LOG_NOT (284)
OP_SUMA (285) 35
OP_RESTA (286) 36
OP_MUL (287) 39
OP_DIV (288) 38
OP_MAYOR (289) 53
OP_MAYOR_IGUAL (290) 56
OP_MENOR (291) 54
OP_MENOR_IGUAL (292) 55
OP_DISTINTO (293) 58
OP_IGUAL_IGUAL (294) 57
OP_IGUAL (295) 33
OP_AS (296) 46
OP_DIM (297) 45
PR_FLOAT (298) 51
PR_INT (299) 50
PR_STRING (300) 52


Nonterminals, with rules where they appear

$accept (46)
    on left: 0
pgm (47)
    on left: 1, on right: 0
programa (48)
    on left: 2 3 4 5, on right: 1
lista_sentencias (49)
    on left: 6 7, on right: 2 3 4 7 25 26 32
sentencia (50)
    on left: 8 9 10 11 12 13, on right: 4 5 6 7
iguales (51)
    on left: 14, on right: 12
lista_expresiones (52)
    on left: 15 16, on right: 14 15
filter (53)
    on left: 17, on right: 13
lista_variables (54)
    on left: 18 19, on right: 17 18
io (55)
    on left: 20 21, on right: 11
entrada (56)
    on left: 22, on right: 20
salida (57)
    on left: 23 24, on right: 21
condicional (58)
    on left: 25 26, on right: 8
condicion (59)
    on left: 27 28 29, on right: 17 25 26 32
comparacion (60)
    on left: 30 31, on right: 27 28 29
iteracion (61)
    on left: 32, on right: 10
asignacion (62)
    on left: 33, on right: 9
expresion (63)
    on left: 34 35 36, on right: 14 15 16 30 31 33 35 36 44
termino (64)
    on left: 37 38 39, on right: 34 35 36 38 39
factor (65)
    on left: 40 41 42 43 44, on right: 37 38 39
declaracion_variables (66)
    on left: 45, on right: 2
lista_variables_tipos (67)
    on left: 46 47, on right: 45
variables (68)
    on left: 48 49, on right: 47 49
tipo_dato (69)
    on left: 50 51 52, on right: 46 47
comparador (70)
    on left: 53 54 55 56 57 58, on right: 30


State 0

    0 $accept: . pgm $end

    TOKEN_ID    shift, and go to state 1
    PR_MAIN     shift, and go to state 2
    PR_IGUALES  shift, and go to state 3
    PR_FILTER   shift, and go to state 4
    PR_WRITE    shift, and go to state 5
    PR_READ     shift, and go to state 6
    PR_IF       shift, and go to state 7
    PR_WHILE    shift, and go to state 8

    pgm          go to state 9
    programa     go to state 10
    sentencia    go to state 11
    iguales      go to state 12
    filter       go to state 13
    io           go to state 14
    entrada      go to state 15
    salida       go to state 16
    condicional  go to state 17
    iteracion    go to state 18
    asignacion   go to state 19


State 1

   33 asignacion: TOKEN_ID . OP_IGUAL expresion

    OP_IGUAL  shift, and go to state 20


State 2

    2 programa: PR_MAIN . PR_DIM declaracion_variables PR_ENDIM lista_sentencias
    3         | PR_MAIN . lista_sentencias

    TOKEN_ID    shift, and go to state 1
    PR_DIM      shift, and go to state 21
    PR_IGUALES  shift, and go to state 3
    PR_FILTER   shift, and go to state 4
    PR_WRITE    shift, and go to state 5
    PR_READ     shift, and go to state 6
    PR_IF       shift, and go to state 7
    PR_WHILE    shift, and go to state 8

    lista_sentencias  go to state 22
    sentencia         go to state 23
    iguales           go to state 12
    filter            go to state 13
    io                go to state 14
    entrada           go to state 15
    salida            go to state 16
    condicional       go to state 17
    iteracion         go to state 18
    asignacion        go to state 19


State 3

   14 iguales: PR_IGUALES . PAR_ABRE expresion COMA COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

    PAR_ABRE  shift, and go to state 24


State 4

   17 filter: PR_FILTER . PAR_ABRE condicion COMA COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

    PAR_ABRE  shift, and go to state 25


State 5

   23 salida: PR_WRITE . TOKEN_ID
   24       | PR_WRITE . CONST_STR

    TOKEN_ID   shift, and go to state 26
    CONST_STR  shift, and go to state 27


State 6

   22 entrada: PR_READ . TOKEN_ID

    TOKEN_ID  shift, and go to state 28


State 7

   25 condicional: PR_IF . condicion PR_THEN lista_sentencias PR_ENDIF
   26            | PR_IF . condicion PR_THEN lista_sentencias PR_ELSE lista_sentencias PR_ENDIF

    TOKEN_ID     shift, and go to state 29
    CONST_INT    shift, and go to state 30
    CONST_STR    shift, and go to state 31
    CONST_FLOAT  shift, and go to state 32
    PR_NOT       shift, and go to state 33

    condicion    go to state 34
    comparacion  go to state 35
    expresion    go to state 36
    termino      go to state 37
    factor       go to state 38


State 8

   32 iteracion: PR_WHILE . condicion PR_BEGIN lista_sentencias PR_END

    TOKEN_ID     shift, and go to state 29
    CONST_INT    shift, and go to state 30
    CONST_STR    shift, and go to state 31
    CONST_FLOAT  shift, and go to state 32
    PR_NOT       shift, and go to state 33

    condicion    go to state 39
    comparacion  go to state 35
    expresion    go to state 36
    termino      go to state 37
    factor       go to state 38


State 9

    0 $accept: pgm . $end

    $end  shift, and go to state 40


State 10

    1 pgm: programa .

    $default  reduce using rule 1 (pgm)


State 11

    4 programa: sentencia . lista_sentencias
    5         | sentencia .

    TOKEN_ID    shift, and go to state 1
    PR_IGUALES  shift, and go to state 3
    PR_FILTER   shift, and go to state 4
    PR_WRITE    shift, and go to state 5
    PR_READ     shift, and go to state 6
    PR_IF       shift, and go to state 7
    PR_WHILE    shift, and go to state 8

    $default  reduce using rule 5 (programa)

    lista_sentencias  go to state 41
    sentencia         go to state 23
    iguales           go to state 12
    filter            go to state 13
    io                go to state 14
    entrada           go to state 15
    salida            go to state 16
    condicional       go to state 17
    iteracion         go to state 18
    asignacion        go to state 19


State 12

   12 sentencia: iguales .

    $default  reduce using rule 12 (sentencia)


State 13

   13 sentencia: filter .

    $default  reduce using rule 13 (sentencia)


State 14

   11 sentencia: io .

    $default  reduce using rule 11 (sentencia)


State 15

   20 io: entrada .

    $default  reduce using rule 20 (io)


State 16

   21 io: salida .

    $default  reduce using rule 21 (io)


State 17

    8 sentencia: condicional .

    $default  reduce using rule 8 (sentencia)


State 18

   10 sentencia: iteracion .

    $default  reduce using rule 10 (sentencia)


State 19

    9 sentencia: asignacion .

    $default  reduce using rule 9 (sentencia)


State 20

   33 asignacion: TOKEN_ID OP_IGUAL . expresion

    TOKEN_ID     shift, and go to state 29
    CONST_INT    shift, and go to state 30
    CONST_STR    shift, and go to state 31
    CONST_FLOAT  shift, and go to state 32

    expresion  go to state 42
    termino    go to state 37
    factor     go to state 38


State 21

    2 programa: PR_MAIN PR_DIM . declaracion_variables PR_ENDIM lista_sentencias

    OP_DIM  shift, and go to state 43

    declaracion_variables  go to state 44


State 22

    3 programa: PR_MAIN lista_sentencias .

    $default  reduce using rule 3 (programa)


State 23

    6 lista_sentencias: sentencia .
    7                 | sentencia . lista_sentencias

    TOKEN_ID    shift, and go to state 1
    PR_IGUALES  shift, and go to state 3
    PR_FILTER   shift, and go to state 4
    PR_WRITE    shift, and go to state 5
    PR_READ     shift, and go to state 6
    PR_IF       shift, and go to state 7
    PR_WHILE    shift, and go to state 8

    $default  reduce using rule 6 (lista_sentencias)

    lista_sentencias  go to state 45
    sentencia         go to state 23
    iguales           go to state 12
    filter            go to state 13
    io                go to state 14
    entrada           go to state 15
    salida            go to state 16
    condicional       go to state 17
    iteracion         go to state 18
    asignacion        go to state 19


State 24

   14 iguales: PR_IGUALES PAR_ABRE . expresion COMA COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA

    TOKEN_ID     shift, and go to state 29
    CONST_INT    shift, and go to state 30
    CONST_STR    shift, and go to state 31
    CONST_FLOAT  shift, and go to state 32

    expresion  go to state 46
    termino    go to state 37
    factor     go to state 38


State 25

   17 filter: PR_FILTER PAR_ABRE . condicion COMA COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

    TOKEN_ID     shift, and go to state 29
    CONST_INT    shift, and go to state 30
    CONST_STR    shift, and go to state 31
    CONST_FLOAT  shift, and go to state 32
    PR_NOT       shift, and go to state 33

    condicion    go to state 47
    comparacion  go to state 35
    expresion    go to state 36
    termino      go to state 37
    factor       go to state 38


State 26

   23 salida: PR_WRITE TOKEN_ID .

    $default  reduce using rule 23 (salida)


State 27

   24 salida: PR_WRITE CONST_STR .

    $default  reduce using rule 24 (salida)


State 28

   22 entrada: PR_READ TOKEN_ID .

    $default  reduce using rule 22 (entrada)


State 29

   43 factor: TOKEN_ID .

    $default  reduce using rule 43 (factor)


State 30

   41 factor: CONST_INT .

    $default  reduce using rule 41 (factor)


State 31

   40 factor: CONST_STR .

    $default  reduce using rule 40 (factor)


State 32

   42 factor: CONST_FLOAT .

    $default  reduce using rule 42 (factor)


State 33

   31 comparacion: PR_NOT . expresion

    TOKEN_ID     shift, and go to state 29
    CONST_INT    shift, and go to state 30
    CONST_STR    shift, and go to state 31
    CONST_FLOAT  shift, and go to state 32

    expresion  go to state 48
    termino    go to state 37
    factor     go to state 38


State 34

   25 condicional: PR_IF condicion . PR_THEN lista_sentencias PR_ENDIF
   26            | PR_IF condicion . PR_THEN lista_sentencias PR_ELSE lista_sentencias PR_ENDIF

    PR_THEN  shift, and go to state 49


State 35

   27 condicion: comparacion .
   28          | comparacion . OP_LOG_AND comparacion
   29          | comparacion . OP_LOG_OR comparacion

    OP_LOG_AND  shift, and go to state 50
    OP_LOG_OR   shift, and go to state 51

    $default  reduce using rule 27 (condicion)


State 36

   30 comparacion: expresion . comparador expresion
   35 expresion: expresion . OP_SUMA termino
   36          | expresion . OP_RESTA termino
   44 factor: expresion .

    OP_SUMA         shift, and go to state 52
    OP_RESTA        shift, and go to state 53
    OP_MAYOR        shift, and go to state 54
    OP_MAYOR_IGUAL  shift, and go to state 55
    OP_MENOR        shift, and go to state 56
    OP_MENOR_IGUAL  shift, and go to state 57
    OP_DISTINTO     shift, and go to state 58
    OP_IGUAL_IGUAL  shift, and go to state 59

    OP_SUMA         [reduce using rule 44 (factor)]
    OP_RESTA        [reduce using rule 44 (factor)]
    OP_MAYOR        [reduce using rule 44 (factor)]
    OP_MAYOR_IGUAL  [reduce using rule 44 (factor)]
    OP_MENOR        [reduce using rule 44 (factor)]
    OP_MENOR_IGUAL  [reduce using rule 44 (factor)]
    OP_DISTINTO     [reduce using rule 44 (factor)]
    OP_IGUAL_IGUAL  [reduce using rule 44 (factor)]
    $default        reduce using rule 44 (factor)

    comparador  go to state 60


State 37

   34 expresion: termino .
   38 termino: termino . OP_DIV factor
   39        | termino . OP_MUL factor

    OP_MUL  shift, and go to state 61
    OP_DIV  shift, and go to state 62

    OP_MUL    [reduce using rule 34 (expresion)]
    OP_DIV    [reduce using rule 34 (expresion)]
    $default  reduce using rule 34 (expresion)


State 38

   37 termino: factor .

    $default  reduce using rule 37 (termino)


State 39

   32 iteracion: PR_WHILE condicion . PR_BEGIN lista_sentencias PR_END

    PR_BEGIN  shift, and go to state 63


State 40

    0 $accept: pgm $end .

    $default  accept


State 41

    4 programa: sentencia lista_sentencias .

    $default  reduce using rule 4 (programa)


State 42

   33 asignacion: TOKEN_ID OP_IGUAL expresion .
   35 expresion: expresion . OP_SUMA termino
   36          | expresion . OP_RESTA termino
   44 factor: expresion .

    OP_SUMA   shift, and go to state 52
    OP_RESTA  shift, and go to state 53

    $end        reduce using rule 33 (asignacion)
    $end        [reduce using rule 44 (factor)]
    TOKEN_ID    reduce using rule 33 (asignacion)
    TOKEN_ID    [reduce using rule 44 (factor)]
    PR_IGUALES  reduce using rule 33 (asignacion)
    PR_IGUALES  [reduce using rule 44 (factor)]
    PR_FILTER   reduce using rule 33 (asignacion)
    PR_FILTER   [reduce using rule 44 (factor)]
    PR_WRITE    reduce using rule 33 (asignacion)
    PR_WRITE    [reduce using rule 44 (factor)]
    PR_READ     reduce using rule 33 (asignacion)
    PR_READ     [reduce using rule 44 (factor)]
    PR_IF       reduce using rule 33 (asignacion)
    PR_IF       [reduce using rule 44 (factor)]
    PR_ENDIF    reduce using rule 33 (asignacion)
    PR_ENDIF    [reduce using rule 44 (factor)]
    PR_ELSE     reduce using rule 33 (asignacion)
    PR_ELSE     [reduce using rule 44 (factor)]
    PR_WHILE    reduce using rule 33 (asignacion)
    PR_WHILE    [reduce using rule 44 (factor)]
    PR_END      reduce using rule 33 (asignacion)
    PR_END      [reduce using rule 44 (factor)]
    OP_SUMA     [reduce using rule 44 (factor)]
    OP_RESTA    [reduce using rule 44 (factor)]
    OP_MUL      reduce using rule 44 (factor)
    OP_DIV      reduce using rule 44 (factor)
    $default    reduce using rule 33 (asignacion)


State 43

   45 declaracion_variables: OP_DIM . COR_ABRE lista_variables_tipos COR_CIERRA

    COR_ABRE  shift, and go to state 64


State 44

    2 programa: PR_MAIN PR_DIM declaracion_variables . PR_ENDIM lista_sentencias

    PR_ENDIM  shift, and go to state 65


State 45

    7 lista_sentencias: sentencia lista_sentencias .

    $default  reduce using rule 7 (lista_sentencias)


State 46

   14 iguales: PR_IGUALES PAR_ABRE expresion . COMA COR_ABRE lista_expresiones COR_CIERRA PAR_CIERRA
   35 expresion: expresion . OP_SUMA termino
   36          | expresion . OP_RESTA termino
   44 factor: expresion .

    COMA      shift, and go to state 66
    OP_SUMA   shift, and go to state 52
    OP_RESTA  shift, and go to state 53

    COMA      [reduce using rule 44 (factor)]
    OP_SUMA   [reduce using rule 44 (factor)]
    OP_RESTA  [reduce using rule 44 (factor)]
    $default  reduce using rule 44 (factor)


State 47

   17 filter: PR_FILTER PAR_ABRE condicion . COMA COR_ABRE lista_variables COR_CIERRA PAR_CIERRA

    COMA  shift, and go to state 67


State 48

   31 comparacion: PR_NOT expresion .
   35 expresion: expresion . OP_SUMA termino
   36          | expresion . OP_RESTA termino
   44 factor: expresion .

    OP_SUMA   shift, and go to state 52
    OP_RESTA  shift, and go to state 53

    PR_THEN     reduce using rule 31 (comparacion)
    PR_THEN     [reduce using rule 44 (factor)]
    PR_BEGIN    reduce using rule 31 (comparacion)
    PR_BEGIN    [reduce using rule 44 (factor)]
    COMA        reduce using rule 31 (comparacion)
    COMA        [reduce using rule 44 (factor)]
    OP_LOG_AND  reduce using rule 31 (comparacion)
    OP_LOG_AND  [reduce using rule 44 (factor)]
    OP_LOG_OR   reduce using rule 31 (comparacion)
    OP_LOG_OR   [reduce using rule 44 (factor)]
    OP_SUMA     [reduce using rule 44 (factor)]
    OP_RESTA    [reduce using rule 44 (factor)]
    OP_MUL      reduce using rule 44 (factor)
    OP_DIV      reduce using rule 44 (factor)
    $default    reduce using rule 31 (comparacion)


State 49

   25 condicional: PR_IF condicion PR_THEN . lista_sentencias PR_ENDIF
   26            | PR_IF condicion PR_THEN . lista_sentencias PR_ELSE lista_sentencias PR_ENDIF

    TOKEN_ID    shift, and go to state 1
    PR_IGUALES  shift, and go to state 3
    PR_FILTER   shift, and go to state 4
    PR_WRITE    shift, and go to state 5
    PR_READ     shift, and go to state 6
    PR_IF       shift, and go to state 7
    PR_WHILE    shift, and go to state 8

    lista_sentencias  go to state 68
    sentencia         go to state 23
    iguales           go to state 12
    filter            go to state 13
    io                go to state 14
    entrada           go to state 15
    salida            go to state 16
    condicional       go to state 17
    iteracion         go to state 18
    asignacion        go to state 19


State 50

   28 condicion: comparacion OP_LOG_AND . comparacion

    TOKEN_ID     shift, and go to state 29
    CONST_INT    shift, and go to state 30
    CONST_STR    shift, and go to state 31
    CONST_FLOAT  shift, and go to state 32
    PR_NOT       shift, and go to state 33

    comparacion  go to state 69
    expresion    go to state 36
    termino      go to state 37
    factor       go to state 38


State 51

   29 condicion: comparacion OP_LOG_OR . comparacion

    TOKEN_ID     shift, and go to state 29
    CONST_INT    shift, and go to state 30
    CONST_STR    shift, and go to state 31
    CONST_FLOAT  shift, and go to state 32
    PR_NOT       shift, and go to state 33

    comparacion  go to state 70
    expresion    go to state 36
    termino      go to state 37
    factor       go to state 38


State 52

   35 expresion: expresion OP_SUMA . termino

    TOKEN_ID     shift, and go to state 29
    CONST_INT    shift, and go to state 30
    CONST_STR    shift, and go to state 31
    CONST_FLOAT  shift, and go to state 32

    expresion  go to state 71
    termino    go to state 72
    factor     go to state 38


State 53

   36 expresion: expresion OP_RESTA . termino

    TOKEN_ID     shift, and go to state 29
    CONST_INT    shift, and go to state 30
    CONST_STR    shift, and go to state 31
    CONST_FLOAT  shift, and go to state 32

    expresion  go to state 71
    termino    go to state 73
    factor     go to state 38


State 54

   53 comparador: OP_MAYOR .

    $default  reduce using rule 53 (comparador)


State 55

   56 comparador: OP_MAYOR_IGUAL .

    $default  reduce using rule 56 (comparador)


State 56

   54 comparador: OP_MENOR .

    $default  reduce using rule 54 (comparador)


State 57

   55 comparador: OP_MENOR_IGUAL .

    $default  reduce using rule 55 (comparador)


State 58

   58 comparador: OP_DISTINTO .

    $default  reduce using rule 58 (comparador)


State 59

   57 comparador: OP_IGUAL_IGUAL .

    $default  reduce using rule 57 (comparador)


State 60

   30 comparacion: expresion comparador . expresion

    TOKEN_ID     shift, and go to state 29
    CONST_INT    shift, and go to state 30
    CONST_STR    shift, and go to state 31
    CONST_FLOAT  shift, and go to state 32

    expresion  go to state 74
    termino    go to state 37
    factor     go to state 38


State 61

   39 termino: termino OP_MUL . factor

    TOKEN_ID     shift, and go to state 29
    CONST_INT    shift, and go to state 30
    CONST_STR    shift, and go to state 31
    CONST_FLOAT  shift, and go to state 32

    expresion  go to state 71
    termino    go to state 37
    factor     go to state 75


State 62

   38 termino: termino OP_DIV . factor

    TOKEN_ID     shift, and go to state 29
    CONST_INT    shift, and go to state 30
    CONST_STR    shift, and go to state 31
    CONST_FLOAT  shift, and go to state 32
